--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "sass --watch assets/styles/sass:assets/styles/css"
+    "scss": "sass --watch ./src/styles/sass:./src/styles/css",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "author": "이윤슬",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "vite": "^6.2.2"
+  },
+  "dependencies": {
+    "gsap": "^3.12.7"
+  }
 }
