--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "sass --watch ./src/styles/sass:./src/styles/css",
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite && sass --watch ./src/styles/sass:./src/styles/css",
+    "build": "vite build && ./src/styles/sass:./src/styles/css",
     "serve": "vite preview"
   },
   "author": "이윤슬",
