🔧 scss vite로 컴파일 되게 수정

--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite && sass --watch ./src/styles/sass:./src/styles/css",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "vite",
+    "build": "vite build"
   },
   "author": "이윤슬",
   "license": "ISC",
   "devDependencies": {
+    "sass": "^1.86.0",
+    "sass-embedded": "^1.86.0",
     "vite": "^6.2.2"
   },
   "dependencies": {
